src/main/gen/com/netreq/fix/plugin/FixParser.java
// This is a generated file. Not intended for manual editing.
package com.netreq.fix.plugin;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.netreq.fix.plugin.psi.FixTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FixParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return fixFile(b, l + 1);
  }

  /* ********************************************************** */
  // TAG EQ VALUE
  public static boolean field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field")) return false;
    if (!nextTokenIs(b, TAG)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, TAG, EQ, VALUE);
    exit_section_(b, m, FIELD, r);
    return r;
  }

  /* ********************************************************** */
  // (message | JUNK)*
  static boolean fixFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fixFile")) return false;
    while (true) {
      int c = current_position_(b);
      if (!fixFile_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "fixFile", c)) break;
    }
    return true;
  }

  // message | JUNK
  private static boolean fixFile_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fixFile_0")) return false;
    boolean r;
    r = message(b, l + 1);
    if (!r) r = consumeToken(b, JUNK);
    return r;
  }

  /* ********************************************************** */
  // (field SEP)+ field?
  public static boolean message(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "message")) return false;
    if (!nextTokenIs(b, TAG)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = message_0(b, l + 1);
    r = r && message_1(b, l + 1);
    exit_section_(b, m, MESSAGE, r);
    return r;
  }

  // (field SEP)+
  private static boolean message_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "message_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = message_0_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!message_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "message_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // field SEP
  private static boolean message_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "message_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = field(b, l + 1);
    r = r && consumeToken(b, SEP);
    exit_section_(b, m, null, r);
    return r;
  }

  // field?
  private static boolean message_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "message_1")) return false;
    field(b, l + 1);
    return true;
  }

}
